zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
typedef struct wasi_io_0_2_0_poll_own_pollable_t {
  int32_t __handle;
} wasi_io_0_2_0_poll_own_pollable_t;
typedef struct wasi_io_0_2_0_streams_own_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_input_stream_t;
typedef struct wasi_io_0_2_0_streams_own_output_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_output_stream_t;
typedef struct {
  bool is_some;
  http_trigger_string_t val;
} http_trigger_option_string_t;
// Defines the case payload type for `DNS-error` above:
typedef struct wasi_http_0_2_0_types_dns_error_payload_t {
  http_trigger_option_string_t   rcode;
  http_trigger_option_u16_t   info_code;
} wasi_http_0_2_0_types_dns_error_payload_t;
// Defines the case payload type for `TLS-alert-received` above:
typedef struct wasi_http_0_2_0_types_tls_alert_received_payload_t {
  http_trigger_option_u8_t   alert_id;
  http_trigger_option_string_t   alert_message;
} wasi_http_0_2_0_types_tls_alert_received_payload_t;
typedef struct {
  bool is_some;
  uint32_t val;
} http_trigger_option_u32_t;
// Defines the case payload type for `HTTP-response-{header,trailer}-size` above:
typedef struct wasi_http_0_2_0_types_field_size_payload_t {
  http_trigger_option_string_t   field_name;
  http_trigger_option_u32_t   field_size;
} wasi_http_0_2_0_types_field_size_payload_t;
typedef struct {
  bool is_some;
  uint64_t val;
} http_trigger_option_u64_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_field_size_payload_t val;
} wasi_http_0_2_0_types_option_field_size_payload_t;
// These cases are inspired by the IANA HTTP Proxy Error Types:
//   https://www.iana.org/assignments/http-proxy-status/http-proxy-status.xhtml#table-http-proxy-error-types
typedef struct wasi_http_0_2_0_types_error_code_t {
  uint8_t tag;
  union {
    wasi_http_0_2_0_types_dns_error_payload_t     dns_error;
    wasi_http_0_2_0_types_tls_alert_received_payload_t     tls_alert_received;
    http_trigger_option_u64_t     http_request_body_size;
    http_trigger_option_u32_t     http_request_header_section_size;
    wasi_http_0_2_0_types_option_field_size_payload_t     http_request_header_size;
    http_trigger_option_u32_t     http_request_trailer_section_size;
    wasi_http_0_2_0_types_field_size_payload_t     http_request_trailer_size;
    http_trigger_option_u32_t     http_response_header_section_size;
    wasi_http_0_2_0_types_field_size_payload_t     http_response_header_size;
    http_trigger_option_u64_t     http_response_body_size;
    http_trigger_option_u32_t     http_response_trailer_section_size;
    wasi_http_0_2_0_types_field_size_payload_t     http_response_trailer_size;
    http_trigger_option_string_t     http_response_transfer_coding;
    http_trigger_option_string_t     http_response_content_coding;
    http_trigger_option_string_t     internal_error;
  } val;
} wasi_http_0_2_0_types_error_code_t;
typedef struct wasi_http_0_2_0_types_own_fields_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_fields_t;
typedef struct wasi_http_0_2_0_types_own_outgoing_request_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_outgoing_request_t;
typedef struct wasi_http_0_2_0_types_own_request_options_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_request_options_t;
typedef struct wasi_http_0_2_0_types_own_incoming_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_incoming_response_t;
typedef struct wasi_http_0_2_0_types_own_future_incoming_response_t {
  int32_t __handle;
} wasi_http_0_2_0_types_own_future_incoming_response_t;
typedef wasi_io_0_2_0_streams_own_input_stream_t wasi_http_0_2_0_types_own_input_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_input_stream_t ok;
  } val;
} wasi_http_0_2_0_types_result_own_input_stream_void_t;
typedef wasi_io_0_2_0_poll_own_pollable_t wasi_http_0_2_0_types_own_pollable_t;
typedef wasi_http_0_2_0_types_own_fields_t wasi_http_0_2_0_types_own_trailers_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_own_trailers_t val;
} wasi_http_0_2_0_types_option_own_trailers_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_option_own_trailers_t ok;
    wasi_http_0_2_0_types_error_code_t err;
  } val;
} wasi_http_0_2_0_types_result_option_own_trailers_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_result_option_own_trailers_error_code_t ok;
  } val;
} wasi_http_0_2_0_types_result_result_option_own_trailers_error_code_void_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_result_result_option_own_trailers_error_code_void_t val;
} wasi_http_0_2_0_types_option_result_result_option_own_trailers_error_code_void_t;
typedef wasi_io_0_2_0_streams_own_output_stream_t wasi_http_0_2_0_types_own_output_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_output_stream_t ok;
  } val;
} wasi_http_0_2_0_types_result_own_output_stream_void_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_error_code_t err;
  } val;
} wasi_http_0_2_0_types_result_void_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_own_incoming_response_t ok;
    wasi_http_0_2_0_types_error_code_t err;
  } val;
} wasi_http_0_2_0_types_result_own_incoming_response_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_types_result_own_incoming_response_error_code_t ok;
  } val;
} wasi_http_0_2_0_types_result_result_own_incoming_response_error_code_void_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_types_result_result_own_incoming_response_error_code_void_t val;
} wasi_http_0_2_0_types_option_result_result_own_incoming_response_error_code_void_t;
typedef wasi_http_0_2_0_types_error_code_t wasi_http_0_2_0_outgoing_handler_error_code_t;
typedef wasi_http_0_2_0_types_own_outgoing_request_t wasi_http_0_2_0_outgoing_handler_own_outgoing_request_t;
typedef wasi_http_0_2_0_types_own_request_options_t wasi_http_0_2_0_outgoing_handler_own_request_options_t;
typedef struct {
  bool is_some;
  wasi_http_0_2_0_outgoing_handler_own_request_options_t val;
} wasi_http_0_2_0_outgoing_handler_option_own_request_options_t;
typedef wasi_http_0_2_0_types_own_future_incoming_response_t wasi_http_0_2_0_outgoing_handler_own_future_incoming_response_t;
typedef struct {
  bool is_err;
  union {
    wasi_http_0_2_0_outgoing_handler_own_future_incoming_response_t ok;
    wasi_http_0_2_0_outgoing_handler_error_code_t err;
  } val;
} wasi_http_0_2_0_outgoing_handler_result_own_future_incoming_response_error_code_t;
// A Large Language Model.
typedef http_trigger_string_t fermyon_spin_2_0_0_llm_inferencing_model_t;
// Inference request parameters
typedef struct fermyon_spin_2_0_0_llm_inferencing_params_t {
  // The maximum tokens that should be inferred.
  // 
  // Note: the backing implementation may return less tokens.
  uint32_t   max_tokens;
  // The amount the model should avoid repeating tokens.
  float   repeat_penalty;
  // The number of tokens the model should apply the repeat penalty to.
  uint32_t   repeat_penalty_last_n_token_count;
  // The randomness with which the next token is selected.
  float   temperature;
  // The number of possible next tokens the model will choose from.
  uint32_t   top_k;
  // The probability total of next tokens the model will choose from.
  float   top_p;
} fermyon_spin_2_0_0_llm_inferencing_params_t;
// The set of errors which may be raised by functions in this interface
typedef struct fermyon_spin_2_0_0_llm_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     runtime_error;
    http_trigger_string_t     invalid_input;
  } val;
} fermyon_spin_2_0_0_llm_error_t;
// Usage information related to the inferencing result
typedef struct fermyon_spin_2_0_0_llm_inferencing_usage_t {
  // Number of tokens in the prompt
  uint32_t   prompt_token_count;
  // Number of tokens generated by the inferencing operation
  uint32_t   generated_token_count;
} fermyon_spin_2_0_0_llm_inferencing_usage_t;
// An inferencing result
typedef struct fermyon_spin_2_0_0_llm_inferencing_result_t {
  // The text generated by the model
  // TODO: this should be a stream
  http_trigger_string_t   text;
  // Usage information about the inferencing request
  fermyon_spin_2_0_0_llm_inferencing_usage_t   usage;
} fermyon_spin_2_0_0_llm_inferencing_result_t;
// The model used for generating embeddings
typedef http_trigger_string_t fermyon_spin_2_0_0_llm_embedding_model_t;
// Usage related to an embeddings generation request
typedef struct fermyon_spin_2_0_0_llm_embeddings_usage_t {
  // Number of tokens in the prompt
  uint32_t   prompt_token_count;
} fermyon_spin_2_0_0_llm_embeddings_usage_t;
typedef struct {
  float *ptr;
  size_t len;
} http_trigger_list_f32_t;
typedef struct {
  http_trigger_list_f32_t *ptr;
  size_t len;
} http_trigger_list_list_f32_t;
// Result of generating embeddings
typedef struct fermyon_spin_2_0_0_llm_embeddings_result_t {
  // The embeddings generated by the request
  http_trigger_list_list_f32_t   embeddings;
  // Usage related to the embeddings generation request
  fermyon_spin_2_0_0_llm_embeddings_usage_t   usage;
} fermyon_spin_2_0_0_llm_embeddings_result_t;
typedef struct {
  bool is_some;
  fermyon_spin_2_0_0_llm_inferencing_params_t val;
} fermyon_spin_2_0_0_llm_option_inferencing_params_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_llm_inferencing_result_t ok;
    fermyon_spin_2_0_0_llm_error_t err;
  } val;
} fermyon_spin_2_0_0_llm_result_inferencing_result_error_t;
typedef struct {
  http_trigger_string_t *ptr;
  size_t len;
} http_trigger_list_string_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_llm_embeddings_result_t ok;
    fermyon_spin_2_0_0_llm_error_t err;
  } val;
} fermyon_spin_2_0_0_llm_result_embeddings_result_error_t;
// Errors related to interacting with Redis
typedef struct fermyon_spin_2_0_0_redis_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     other;
  } val;
} fermyon_spin_2_0_0_redis_error_t;
typedef struct fermyon_spin_2_0_0_redis_own_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_redis_own_connection_t;
typedef struct fermyon_spin_2_0_0_redis_borrow_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_redis_borrow_connection_t;
// The message payload.
typedef struct fermyon_spin_2_0_0_redis_payload_t {
  uint8_t   *ptr;
  size_t len;
} fermyon_spin_2_0_0_redis_payload_t;
// A parameter type for the general-purpose `execute` function.
typedef struct fermyon_spin_2_0_0_redis_redis_parameter_t {
  uint8_t tag;
  union {
    int64_t     int64;
    fermyon_spin_2_0_0_redis_payload_t     binary;
  } val;
} fermyon_spin_2_0_0_redis_redis_parameter_t;
// A return type for the general-purpose `execute` function.
typedef struct fermyon_spin_2_0_0_redis_redis_result_t {
  uint8_t tag;
  union {
    http_trigger_string_t     status;
    int64_t     int64;
    fermyon_spin_2_0_0_redis_payload_t     binary;
  } val;
} fermyon_spin_2_0_0_redis_redis_result_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_redis_own_connection_t ok;
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_own_connection_error_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_void_error_t;
typedef struct {
  bool is_some;
  fermyon_spin_2_0_0_redis_payload_t val;
} http_trigger_option_payload_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_option_payload_t ok;
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_option_payload_error_t;