zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

const union_unnamed_13 = extern union {
    ok: wasi_http_0_2_0_types_own_input_stream_t,
};
pub const wasi_http_0_2_0_types_result_own_input_stream_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_13 = @import("std").mem.zeroes(union_unnamed_13),
};
pub const wasi_http_0_2_0_types_own_pollable_t = wasi_io_0_2_0_poll_own_pollable_t;
pub const wasi_http_0_2_0_types_own_trailers_t = wasi_http_0_2_0_types_own_fields_t;
pub const wasi_http_0_2_0_types_option_own_trailers_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_own_trailers_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_own_trailers_t),
};
const union_unnamed_14 = extern union {
    ok: wasi_http_0_2_0_types_option_own_trailers_t,
    err: wasi_http_0_2_0_types_error_code_t,
};
pub const wasi_http_0_2_0_types_result_option_own_trailers_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_14 = @import("std").mem.zeroes(union_unnamed_14),
};
const union_unnamed_15 = extern union {
    ok: wasi_http_0_2_0_types_result_option_own_trailers_error_code_t,
};
pub const wasi_http_0_2_0_types_result_result_option_own_trailers_error_code_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_15 = @import("std").mem.zeroes(union_unnamed_15),
};
pub const wasi_http_0_2_0_types_option_result_result_option_own_trailers_error_code_void_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_result_result_option_own_trailers_error_code_void_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_result_result_option_own_trailers_error_code_void_t),
};
pub const wasi_http_0_2_0_types_own_output_stream_t = wasi_io_0_2_0_streams_own_output_stream_t;
const union_unnamed_16 = extern union {
    ok: wasi_http_0_2_0_types_own_output_stream_t,
};
pub const wasi_http_0_2_0_types_result_own_output_stream_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_16 = @import("std").mem.zeroes(union_unnamed_16),
};
const union_unnamed_17 = extern union {
    err: wasi_http_0_2_0_types_error_code_t,
};
pub const wasi_http_0_2_0_types_result_void_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_17 = @import("std").mem.zeroes(union_unnamed_17),
};
const union_unnamed_18 = extern union {
    ok: wasi_http_0_2_0_types_own_incoming_response_t,
    err: wasi_http_0_2_0_types_error_code_t,
};
pub const wasi_http_0_2_0_types_result_own_incoming_response_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_18 = @import("std").mem.zeroes(union_unnamed_18),
};
const union_unnamed_19 = extern union {
    ok: wasi_http_0_2_0_types_result_own_incoming_response_error_code_t,
};
pub const wasi_http_0_2_0_types_result_result_own_incoming_response_error_code_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_19 = @import("std").mem.zeroes(union_unnamed_19),
};
pub const wasi_http_0_2_0_types_option_result_result_own_incoming_response_error_code_void_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_types_result_result_own_incoming_response_error_code_void_t = @import("std").mem.zeroes(wasi_http_0_2_0_types_result_result_own_incoming_response_error_code_void_t),
};
pub const wasi_http_0_2_0_outgoing_handler_error_code_t = wasi_http_0_2_0_types_error_code_t;
pub const wasi_http_0_2_0_outgoing_handler_own_outgoing_request_t = wasi_http_0_2_0_types_own_outgoing_request_t;
pub const wasi_http_0_2_0_outgoing_handler_own_request_options_t = wasi_http_0_2_0_types_own_request_options_t;
pub const wasi_http_0_2_0_outgoing_handler_option_own_request_options_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_http_0_2_0_outgoing_handler_own_request_options_t = @import("std").mem.zeroes(wasi_http_0_2_0_outgoing_handler_own_request_options_t),
};
pub const wasi_http_0_2_0_outgoing_handler_own_future_incoming_response_t = wasi_http_0_2_0_types_own_future_incoming_response_t;
const union_unnamed_20 = extern union {
    ok: wasi_http_0_2_0_outgoing_handler_own_future_incoming_response_t,
    err: wasi_http_0_2_0_outgoing_handler_error_code_t,
};
pub const wasi_http_0_2_0_outgoing_handler_result_own_future_incoming_response_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_20 = @import("std").mem.zeroes(union_unnamed_20),
};
pub const fermyon_spin_2_0_0_llm_inferencing_model_t = http_trigger_string_t;
pub const struct_fermyon_spin_2_0_0_llm_inferencing_params_t = extern struct {
    max_tokens: u32 = @import("std").mem.zeroes(u32),
    repeat_penalty: f32 = @import("std").mem.zeroes(f32),
    repeat_penalty_last_n_token_count: u32 = @import("std").mem.zeroes(u32),
    temperature: f32 = @import("std").mem.zeroes(f32),
    top_k: u32 = @import("std").mem.zeroes(u32),
    top_p: f32 = @import("std").mem.zeroes(f32),
};
pub const fermyon_spin_2_0_0_llm_inferencing_params_t = struct_fermyon_spin_2_0_0_llm_inferencing_params_t;
const union_unnamed_21 = extern union {
    runtime_error: http_trigger_string_t,
    invalid_input: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_llm_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_21 = @import("std").mem.zeroes(union_unnamed_21),
};
pub const fermyon_spin_2_0_0_llm_error_t = struct_fermyon_spin_2_0_0_llm_error_t;
pub const struct_fermyon_spin_2_0_0_llm_inferencing_usage_t = extern struct {
    prompt_token_count: u32 = @import("std").mem.zeroes(u32),
    generated_token_count: u32 = @import("std").mem.zeroes(u32),
};
pub const fermyon_spin_2_0_0_llm_inferencing_usage_t = struct_fermyon_spin_2_0_0_llm_inferencing_usage_t;
pub const struct_fermyon_spin_2_0_0_llm_inferencing_result_t = extern struct {
    text: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
    usage: fermyon_spin_2_0_0_llm_inferencing_usage_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_llm_inferencing_usage_t),
};
pub const fermyon_spin_2_0_0_llm_inferencing_result_t = struct_fermyon_spin_2_0_0_llm_inferencing_result_t;
pub const fermyon_spin_2_0_0_llm_embedding_model_t = http_trigger_string_t;
pub const struct_fermyon_spin_2_0_0_llm_embeddings_usage_t = extern struct {
    prompt_token_count: u32 = @import("std").mem.zeroes(u32),
};
pub const fermyon_spin_2_0_0_llm_embeddings_usage_t = struct_fermyon_spin_2_0_0_llm_embeddings_usage_t;
pub const http_trigger_list_f32_t = extern struct {
    ptr: [*c]f32 = @import("std").mem.zeroes([*c]f32),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const http_trigger_list_list_f32_t = extern struct {
    ptr: [*c]http_trigger_list_f32_t = @import("std").mem.zeroes([*c]http_trigger_list_f32_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const struct_fermyon_spin_2_0_0_llm_embeddings_result_t = extern struct {
    embeddings: http_trigger_list_list_f32_t = @import("std").mem.zeroes(http_trigger_list_list_f32_t),
    usage: fermyon_spin_2_0_0_llm_embeddings_usage_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_llm_embeddings_usage_t),
};
pub const fermyon_spin_2_0_0_llm_embeddings_result_t = struct_fermyon_spin_2_0_0_llm_embeddings_result_t;
pub const fermyon_spin_2_0_0_llm_option_inferencing_params_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: fermyon_spin_2_0_0_llm_inferencing_params_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_llm_inferencing_params_t),
};
const union_unnamed_22 = extern union {
    ok: fermyon_spin_2_0_0_llm_inferencing_result_t,
    err: fermyon_spin_2_0_0_llm_error_t,
};
pub const fermyon_spin_2_0_0_llm_result_inferencing_result_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_22 = @import("std").mem.zeroes(union_unnamed_22),
};
pub const http_trigger_list_string_t = extern struct {
    ptr: [*c]http_trigger_string_t = @import("std").mem.zeroes([*c]http_trigger_string_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_23 = extern union {
    ok: fermyon_spin_2_0_0_llm_embeddings_result_t,
    err: fermyon_spin_2_0_0_llm_error_t,
};
pub const fermyon_spin_2_0_0_llm_result_embeddings_result_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_23 = @import("std").mem.zeroes(union_unnamed_23),
};
const union_unnamed_24 = extern union {
    other: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_redis_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_24 = @import("std").mem.zeroes(union_unnamed_24),
};
pub const fermyon_spin_2_0_0_redis_error_t = struct_fermyon_spin_2_0_0_redis_error_t;
pub const struct_fermyon_spin_2_0_0_redis_own_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_redis_own_connection_t = struct_fermyon_spin_2_0_0_redis_own_connection_t;
pub const struct_fermyon_spin_2_0_0_redis_borrow_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_redis_borrow_connection_t = struct_fermyon_spin_2_0_0_redis_borrow_connection_t;
pub const struct_fermyon_spin_2_0_0_redis_payload_t = extern struct {
    ptr: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const fermyon_spin_2_0_0_redis_payload_t = struct_fermyon_spin_2_0_0_redis_payload_t;
const union_unnamed_25 = extern union {
    int64: i64,
    binary: fermyon_spin_2_0_0_redis_payload_t,
};
pub const struct_fermyon_spin_2_0_0_redis_redis_parameter_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_25 = @import("std").mem.zeroes(union_unnamed_25),
};
pub const fermyon_spin_2_0_0_redis_redis_parameter_t = struct_fermyon_spin_2_0_0_redis_redis_parameter_t;
const union_unnamed_26 = extern union {
    status: http_trigger_string_t,
    int64: i64,
    binary: fermyon_spin_2_0_0_redis_payload_t,
};
pub const struct_fermyon_spin_2_0_0_redis_redis_result_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_26 = @import("std").mem.zeroes(union_unnamed_26),
};
pub const fermyon_spin_2_0_0_redis_redis_result_t = struct_fermyon_spin_2_0_0_redis_redis_result_t;
const union_unnamed_27 = extern union {
    ok: fermyon_spin_2_0_0_redis_own_connection_t,
    err: fermyon_spin_2_0_0_redis_error_t,
};
pub const fermyon_spin_2_0_0_redis_result_own_connection_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_27 = @import("std").mem.zeroes(union_unnamed_27),
};
const union_unnamed_28 = extern union {
    err: fermyon_spin_2_0_0_redis_error_t,
};
pub const fermyon_spin_2_0_0_redis_result_void_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_28 = @import("std").mem.zeroes(union_unnamed_28),
};
pub const http_trigger_option_payload_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: fermyon_spin_2_0_0_redis_payload_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_redis_payload_t),
};
const union_unnamed_29 = extern union {
    ok: http_trigger_option_payload_t,
    err: fermyon_spin_2_0_0_redis_error_t,
};
pub const fermyon_spin_2_0_0_redis_result_option_payload_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_29 = @import("std").mem.zeroes(union_unnamed_29),
};
const union_unnamed_30 = extern union {
    ok: i64,
    err: fermyon_spin_2_0_0_redis_error_t,
};
